--- a/css/style.css
+++ b/css/style.css
@@ -3,15 +3,44 @@ html, body {
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
 body {
   background-color: #0AD2A2;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.page-title {
+.container {
+  padding-top: 20px;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.container__heading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.4);
+  width: 100%;
+  padding: 10px;
+}
+.container__heading__pharmacy {
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  text-shadow: 2px 2px 3px #E8E8FF;
+  margin-bottom: 5px;
+}
+.container__heading__wish {
+  font-family: "Inter", sans-serif;
+  font-size: 18px;
+}
+.container__question {
   text-align: center;
   font-family: "Inter", sans-serif;
 }
@@ -35,15 +64,15 @@ body {
   display: grid;
   grid-template-columns: repeat(2, 100px);
   justify-content: center;
-  gap: 15px;
+  gap: 25px;
 }
 .emoji-box__item {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  height: 100px;
-  width: 100px;
+  height: 105px;
+  width: 105px;
   border: 1px solid #000000;
   border-radius: 10px;
   box-shadow: inset 5px 5px 10px rgba(0, 0, 0, 0.1), inset -5px -5px 10px rgba(255, 255, 255, 0.2), 1px 1px 2px rgba(0, 0, 0, 0.3);
@@ -51,12 +80,56 @@ body {
 }
 .emoji-box__item.active {
   border: 1px solid #4282d6;
+  background-color: #4282d6;
+  box-shadow: inset 5px 5px 10px rgba(0, 0, 0, 0.2), inset -5px -5px 10px rgba(255, 255, 255, 0.3), 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
 .emoji-box__item img {
   height: 50px;
 }
 .emoji-box__item label {
   pointer-events: none;
+  text-align: center;
+}
+.emoji-box__feedback {
+  margin-top: 30px;
+  width: 300px;
+}
+.emoji-box__feedback__heading {
+  margin-top: 30px;
+  text-align: center;
+  font-weight: bold;
+}
+.emoji-box__feedback td {
+  display: flex;
+}
+.emoji-box__feedback__comment textarea {
+  resize: none;
+  outline: none;
+  font-family: "Inter", sans-serif;
+  font-size: 15px;
+  height: 80px;
+  padding: 5px;
+  border: none;
+  border-radius: 5px;
+  width: 100%;
+}
+.emoji-box__feedback__name input {
+  width: 100%;
+  outline: none;
+  padding: 5px;
+  font-family: "Inter", sans-serif;
+  font-size: 15px;
+  border: none;
+  border-radius: 5px;
+}
+.emoji-box__feedback__contact input {
+  width: 100%;
+  outline: none;
+  padding: 5px;
+  font-family: "Inter", sans-serif;
+  font-size: 15px;
+  border: none;
+  border-radius: 5px;
 }
 .emoji-box__submit {
   margin: 30px 0px;
