--- a/sass/Base/_BodySelector.scss
+++ b/sass/Base/_BodySelector.scss
@@ -3,10 +3,12 @@ html, body{
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 }
 
 body{
     background-color: $color-primary;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
