--- a/sass/Pages/_Index.scss
+++ b/sass/Pages/_Index.scss
@@ -29,6 +29,7 @@
         &__question{
             text-align: center;
             font-family: 'Inter', sans-serif;
+            margin: 20px 10px;
         }
 }
 
@@ -113,6 +114,7 @@
                             border: none;
                             border-radius: 5px;
                             width: 100%;
+                            background-color: $color-secondary-1;
                         }
                 }
 
@@ -130,6 +132,7 @@
                             font-size: 15px;
                             border: none;
                             border-radius: 5px;
+                            background-color: $color-secondary-1;
                         }
                 }
 
@@ -147,6 +150,7 @@
                             font-size: 15px;
                             border: none;
                             border-radius: 5px;
+                            background-color: $color-secondary-1;
                         }
                 }
         }
