--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,9 @@
     //BODY
     @import "Base/BodySelector";
 
+    //UNIVERSAL SELECTOR
+    @import "Base/UniversalSelector";
+
 //COMPONENTS
 
 //LAYOUTS
