--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,7 @@ body {
   font-family: "Inter", sans-serif;
   font-weight: 600;
   font-size: 16px;
+  pointer-events: none;
 }
 
 .emoji-box2 {
