--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,7 +18,9 @@
     @import "Base/UniversalSelector";
 
 //COMPONENTS
-
+    //MESSAGE D'ERREUR OU DE REUSSITE
+    @import "Components/Failure-success-message";
+    
 //LAYOUTS
 
 //PAGES
@@ -27,5 +29,8 @@
 
     //Page index2
     @import "Pages/Index2";
+
+    //Page de remerciement
+    @import "Pages/Remerciement";
 
 //THEMES
