--- a/sass/Utils/_Variables.scss
+++ b/sass/Utils/_Variables.scss
@@ -1,6 +1,6 @@
 $pure-white: #FFFFFF;
 $pure-black: #000000;
-$color-primary: #0AD2A2;
+$color-primary: #4DF4F7;
 $color-secondary-1: #E8E8FF;
-$color-secondary-2: #4282d6;
+$color-secondary-2: #66d1d3;
 $color-secondary-3: #dc142f;
