--- a/sass/Base/_BodySelector.scss
+++ b/sass/Base/_BodySelector.scss
@@ -4,7 +4,7 @@ html, body{
 }
 
 body{
-    background-color: $color-primary;
+    background-color: $pure-white;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
