--- a/sass/Pages/_Index.scss
+++ b/sass/Pages/_Index.scss
@@ -106,13 +106,37 @@
         }
 
         &__feedback{
+            display: none;
             margin-top: 30px;
             width: 90%;
+            transition: all 0.5s ease-in-out;
+                &.active{
+                    transition: all 0.5s ease-in-out;
+                    display: table;
+                }
+
                 &__heading{
                     margin-top: 30px;
                     text-align: center;
                     font-weight: bold;
                     font-size: 14px;
+                }
+
+                &__comment-btn{
+                    width: 90%;
+                    margin: 15px 0px;
+                    border: 1px solid #000000;
+                    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+                    border-radius: 5px;
+                    font-family: "Inter", sans-serif;
+                    font-size: 14px;
+                    font-weight: bold;
+                    text-transform: uppercase;
+                    letter-spacing: 1px;
+                    padding: 7px 20px;
+                    color: $pure-white;
+                    background-color: $color-secondary-2;
+                    cursor: pointer;
                 }
 
                 td{
@@ -190,7 +214,7 @@
             box-shadow: 2px 2px 5px opacify-color($pure-black, 0.3);
             border-radius: 5px;
             font-family: 'Inter', sans-serif;
-            font-size: 18px;
+            font-size: 16px;
             font-weight: bold;
             text-transform: uppercase;
             letter-spacing: 1px;
