modif comment button (UI + toggle)

--- a/sass/Utils/_Variables.scss
+++ b/sass/Utils/_Variables.scss
@@ -4,3 +4,4 @@ $color-primary: #4DF4F7;
 $color-secondary-1: #E8E8FF;
 $color-secondary-2: #66d1d3;
 $color-secondary-3: #dc142f;
+$color-link-1: #090692;
