--- a/css/style.css
+++ b/css/style.css
@@ -157,19 +157,15 @@ body {
   font-size: 14px;
 }
 .emoji-box__feedback__comment-btn {
-  width: 90%;
-  margin: 15px 0px;
-  border: 1px solid #000000;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-  border-radius: 5px;
+  margin-top: 15px;
+  border: none;
+  color: #090692;
   font-family: "Inter", sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: bold;
-  text-transform: uppercase;
+  background-color: transparent;
+  text-decoration: underline;
   letter-spacing: 1px;
-  padding: 7px 20px;
-  color: #FFFFFF;
-  background-color: #66d1d3;
   cursor: pointer;
 }
 .emoji-box__feedback td {
