--- a/sass/Pages/_Index.scss
+++ b/sass/Pages/_Index.scss
@@ -123,19 +123,29 @@
                 }
 
                 &__comment-btn{
-                    width: 90%;
-                    margin: 15px 0px;
-                    border: 1px solid #000000;
-                    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-                    border-radius: 5px;
+                    // width: 90%;
+                    // margin: 15px 0px;
+                    // border: 1px solid #000000;
+                    // box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+                    // border-radius: 5px;
+                    // font-family: "Inter", sans-serif;
+                    // font-size: 14px;
+                    // font-weight: bold;
+                    // text-transform: uppercase;
+                    // letter-spacing: 1px;
+                    // padding: 7px 20px;
+                    // color: $pure-white;
+                    // background-color: $color-secondary-2;
+
+                    margin-top: 15px;
+                    border: none;
+                    color: $color-link-1;
                     font-family: "Inter", sans-serif;
-                    font-size: 14px;
+                    font-size: 16px;
                     font-weight: bold;
-                    text-transform: uppercase;
+                    background-color: transparent;
+                    text-decoration: underline;
                     letter-spacing: 1px;
-                    padding: 7px 20px;
-                    color: $pure-white;
-                    background-color: $color-secondary-2;
                     cursor: pointer;
                 }
 
